--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ APP_ENV=dev
 APP_SECRET=b82dd477f2edc02a3b2c3e1faac83330
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
+
+REDIS_HOST=redis-server
+REDIS_PORT=6379
+DEFAULT_REDIS_DATABASE=0
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://localhost
+###< snc/redis-bundle ###
