--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 /public/bundles/
 /var/
 /vendor/
-/.idea/
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
@@ -18,3 +17,7 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+/.idea/
+/public/build/
+/frontend/node_modules/
