feat: fix statuses and add comment table

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,5 +38,6 @@ security:
          - { path: ^/user, roles: ROLE_USER }
          - { path: ^/performer, roles: ROLE_PERFORMER }
          - { path: ^/moder, roles: ROLE_MODER }
-         - { path: ^/api/admin, roles: [ROLE_MODER, ROLE_ADMIN]}
+         - { path: ^/corrector, roles: ROLE_CORRECTOR }
+         - { path: ^/api/admin, roles: [ROLE_MODER, ROLE_ADMIN, ROLE_CORRECTOR]}
          - { path: ^/api/user, roles: ROLE_USER}
